* Rename the `global` variable in String#replace to `isGlobal` as to not be confused with the environment's `global` object. [jddalton]

* Optimize private method concatList() by no longer cloning the list being concatenated. [jddalton, Robert Kieffer]

* Optimize Element#hasClassName. [Diego Perini]

* Remove extraneous Safari 2 fork of the $A() utility method. [Prototype LH #595] [jddalton, kangax]

* Fix incorrect method references in the DOM Level 0 event system. [jddalton]

* Add private methods getWindow() and getRoot() to ensure the Event system works across frames. [jddalton]

* Fix how Event#pointer methods lazily define themselves as well as a bug in IE Event#pointer methods . [jddalton]

* Fixed Opera 9.2x bug in nodeListSlice() when converting node lists containing an element with an id="length". [Diego Perini, jddalton]

* Add Opera support to the ELEMENT_SPECIFIC_EXTENSIONS feature detection. [jddalton]

* Add missing semi-colon to String#toQueryParams and make Selector methods more Caja friendly. [jddalton]

* Large cleanup of code in preparation for the namespace rewrite. [jddalton]
  - Add private method getNodeName() [David Mark, kangax]
  - Rename private method getOwnerDoc() to getDocument()
  - Move private variables body, doc, docEl, dummy, and root to the Fuse object as Fuse._body, Fuse._doc, Fuse._docEl, Fuse._div, Fuse._root
  - Remove window onunload event handlers to enable bfcache
  - Fix IE memory leak in the Event object
  - Indicate methods are private by prefixing their name with an underscore
  - Optimize the RegExp.specialChar.s fix
  - Cleanup Try object
  - Ensure elements are cached propertly, in IE, when created with a name/type attribute

* unit test: Fix DOM test `testElementUpdateWithToElementMethod` check for html comments in Safari 2 and change the wording on some Event test error messages. [jddalton]

* Add Object._extend() as a stripped down version of Object.extend() without any `DontEnum` fixes. [jddalton]
