@@ -1811,10 +1811,15 @@ new Test.Unit.Runner({
     // Ensure document.body is returned even when using document.documentElement.
     this.assertEqual(document.body, $(document.documentElement).getOffsetParent());
 
-    // Make sure TD, TH, or TABLE is returned
+    // Ensure TD, TH, or TABLE is returned
     this.assertEqual('TABLE', $('tr_offset_parent_test').getOffsetParent().tagName.toUpperCase(), 'offsetParent should be TABLE');
     this.assertEqual('TH', $('th_offset_parent_test').getOffsetParent().tagName.toUpperCase(), 'offsetParent should be TH');
     this.assertEqual('TD', $('td_offset_parent_test').getOffsetParent().tagName.toUpperCase(), 'offsetParent should be TD');
+
+    // Ensure MAP is returned
+    var element = $('map_offset_parent_test');
+    this.assertEqual('MAP', element.getOffsetParent().tagName.toUpperCase(), 'offsetParent should be MAP');
+    this.assertEqual('BODY', element.up().getOffsetParent().tagName.toUpperCase(), 'offsetParent should be BODY');
 
     // Ensure no errors are raised on document fragments
     var offsetParent, div = new Element('div'), fragment = document.createDocumentFragment();
