@@ -326,6 +326,11 @@
   </tbody>
 </table>
 
+<map name="test_map">
+  <area href="" alt="" coords="0,0,1,1" />
+  <area id="map_offset_parent_test" href="" alt="" coords="0,0,2,2" />
+</map>
+
 <div id="body_relative" style="position: relative;"></div>
 <div id="body_absolute" style="position: absolute; top: 10px; left: 10px">
   <div id="absolute_absolute" style="position: absolute; top: 10px; left:10px; width: 25px; height: 25px; overflow:scroll;">
